visualization of tags in gallery page
Former-commit-id: ea39ad036dcbebacb9bd60dcd9c63cfdda37900e [formerly e99aa71c67d4ea644eaa688f1bd9c8bcdc1932db]
Former-commit-id: 17e0486cf964068d83c8a8028ea9988b53bf1237

--- a/ExViewer/App.xaml
+++ b/ExViewer/App.xaml
@@ -65,6 +65,8 @@
                         Value="0" />
                 <Setter Property="MinHeight"
                         Value="0" />
+                <Setter Property="MinWidth"
+                        Value="0" />
                 <Setter Property="IsTabStop"
                         Value="False" />
             </Style>
