--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -1,8 +1,10 @@
 ﻿<Page x:Class="ExViewer.Views.GalleryPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:client="using:ExClient"
       xmlns:local="using:ExViewer.Views"
       xmlns:controls="using:ExViewer.Controls"
+      xmlns:VM="using:ExViewer.ViewModels"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d"
@@ -15,7 +17,6 @@
             </NavigationThemeTransition>
         </TransitionCollection>
     </Page.Transitions>
-
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -39,38 +40,78 @@
                                           Offset="1" />
                         </LinearGradientBrush>
                     </Grid.Background>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="4" />
-                        <RowDefinition />
-                        <RowDefinition Height="4" />
-                    </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="150" />
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
                     <Image Source="{x:Bind VM.Gallery.Thumb, Mode=OneWay}"
-                           Grid.Row="1"
-                           Margin="4" />
-                    <RelativePanel Margin="4"
-                                   Grid.Row="1"
-                                   Grid.Column="1">
+                           Margin="8" />
+                    <RelativePanel Grid.Column="1">
                         <controls:CategoryTag x:Name="Category"
+                                              Margin="8"
                                               Category="{x:Bind VM.Gallery.Category, Mode=OneWay}"
                                               RelativePanel.AlignLeftWithPanel="True" />
-                        <TextBlock x:Name="RecordCount"
-                                   RelativePanel.RightOf="Category"
-                                   RelativePanel.AlignVerticalCenterWith="Category"
-                                   Text="{x:Bind VM.Gallery.RecordCount, Mode=OneWay, ConverterParameter=\{0\} Pages, Converter={StaticResource StringConverter}}" />
                         <TextBlock x:Name="Rating"
-                                   RelativePanel.Below="Category"
+                                   RelativePanel.RightOf="Category"
+                                   Margin="8"
                                    Text="{x:Bind VM.Gallery.Rating, Mode=OneWay, Converter={StaticResource RateStringConverter}}"
                                    FontFamily="Segoe MDL2 Assets" />
                         <ListView x:Name="lv_Tags"
-                                  RelativePanel.Below="Rating"
-                                  ItemsSource="{x:Bind VM.Gallery.Tags, Mode=OneWay}"
-                                  ItemClick="lv_Tags_ItemClick"
-                                  IsItemClickEnabled="True">
-
+                                  Margin="6"
+                                  RelativePanel.Below="Category"
+                                  RelativePanel.AlignRightWithPanel="True"
+                                  RelativePanel.AlignLeftWith="Category"
+                                  SelectionMode="None"
+                                  ItemsSource="{x:Bind VM.SortedTags, Mode=OneWay}"
+                                  ItemContainerStyle="{StaticResource StackPanelListViewItemStyle}">
+                            <ListView.ItemTemplate>
+                                <DataTemplate x:DataType="VM:TagList">
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="Auto" />
+                                            <ColumnDefinition />
+                                        </Grid.ColumnDefinitions>
+                                        <TextBlock Grid.Column="0"
+                                                   Text="{x:Bind NameSpace}"
+                                                   MinWidth="80" 
+                                                   Padding="2"/>
+                                        <GridView Grid.Column="1"
+                                                  ItemsSource="{x:Bind}"
+                                                  SelectionMode="None"
+                                                  IsItemClickEnabled="True"
+                                                  ItemClick="gv_Tags_ItemClick"
+                                                  Padding="0"
+                                                  HorizontalAlignment="Left">
+                                            <GridView.ItemContainerStyle>
+                                                <Style TargetType="GridViewItem">
+                                                    <Setter Property="MinHeight"
+                                                            Value="0" />
+                                                    <Setter Property="MinWidth"
+                                                            Value="0" />
+                                                </Style>
+                                            </GridView.ItemContainerStyle>
+                                            <GridView.ItemTemplate>
+                                                <DataTemplate x:DataType="client:Tag">
+                                                    <TextBlock Text="{x:Bind Content}"
+                                                               Padding="4,2">
+                                                        <FlyoutBase.AttachedFlyout>
+                                                            <MenuFlyout>
+                                                                <MenuFlyoutItem Text="Go to EHWiki for defination" />
+                                                                <MenuFlyoutItem Text="Show galleries with this tag" />
+                                                            </MenuFlyout>
+                                                        </FlyoutBase.AttachedFlyout>
+                                                    </TextBlock>
+                                                </DataTemplate>
+                                            </GridView.ItemTemplate>
+                                            <GridView.ItemsPanel>
+                                                <ItemsPanelTemplate>
+                                                    <controls:WrapStackPanel Orientation="Horizontal"></controls:WrapStackPanel>
+                                                </ItemsPanelTemplate>
+                                            </GridView.ItemsPanel>
+                                        </GridView>
+                                    </Grid>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
                         </ListView>
                     </RelativePanel>
                 </Grid>
