Adaptive UI 4 GalleryPage
Former-commit-id: 099d1864c619d751ddf02ec05c1a1f0a77dc4bb7 [formerly 8cb2ada91534f2b950ed69117c8d8c8665e3c434]
Former-commit-id: 1116c5fcf4d66b568698aca3c9f672a680e69f26

--- a/ExViewer/Controls/GalleryViewer.xaml
+++ b/ExViewer/Controls/GalleryViewer.xaml
@@ -61,6 +61,7 @@
                        Grid.Row="4" />
             <TextBlock Text="{x:Bind Gallery.Rating, Mode=OneWay, Converter={StaticResource RateStringConverter}}"
                        FontFamily="Segoe MDL2 Assets"
+                       VerticalAlignment="Center"
                        Grid.Row="3" />
             <TextBlock Text="{x:Bind Gallery.Uploader, Mode=OneWay}"
                        Grid.Row="4"
