UI for torrents and comments
Former-commit-id: 3af4386b98ff5b7277e34797c4a240388ed88e95 [formerly e79218d253986d8a09b735f5b7501015497048cf]
Former-commit-id: 92e73d5849686c8d851909e39e3dd834aec73448

--- a/ExViewer/App.xaml
+++ b/ExViewer/App.xaml
@@ -49,6 +49,7 @@
                                         Function="x + 1"
                                         InversedFunction="x - 1" />
             <local:DateTimeToStringConverter x:Key="DateTimeToStringConverter" />
+            <local:SizeConverter x:Key="SizeConverter" />
 
             <Style x:Key="StackPanelListViewItemStyle"
                    TargetType="ListViewItem">
